--- a/src/main/resources/cz/kfkl/mstruct/gui/ui/crystal.fxml
+++ b/src/main/resources/cz/kfkl/mstruct/gui/ui/crystal.fxml
@@ -221,7 +221,11 @@
 						</Tab>
 						<Tab text="Bond-valence">
 							<content>
-								<AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="180.0" prefWidth="200.0" />
+								<AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="180.0" prefWidth="200.0">
+									<children>
+										<TableView fx:id="bondValenceTableView" prefHeight="400.0" prefWidth="177.0"/>
+									</children>
+								</AnchorPane>
 							</content>
 						</Tab>
 					</tabs>
