--- a/src/main/resources/cz/kfkl/mstruct/gui/ui/scattererMolecule.fxml
+++ b/src/main/resources/cz/kfkl/mstruct/gui/ui/scattererMolecule.fxml
@@ -2,6 +2,8 @@
 
 <?import javafx.geometry.Insets?>
 <?import javafx.scene.control.Label?>
+<?import javafx.scene.control.Tab?>
+<?import javafx.scene.control.TabPane?>
 <?import javafx.scene.control.TableColumn?>
 <?import javafx.scene.control.TableView?>
 <?import javafx.scene.control.TextField?>
@@ -13,7 +15,7 @@
 <?import javafx.scene.layout.VBox?>
 <?import javafx.scene.text.Font?>
 
-<VBox fillWidth="true" xmlns="http://javafx.com/javafx/16" xmlns:fx="http://javafx.com/fxml/1" fx:controller="cz.kfkl.mstruct.gui.ui.ScattererMoleculeController">
+<VBox fillWidth="true" xmlns="http://javafx.com/javafx/16" xmlns:fx="http://javafx.com/fxml/1" fx:controller="cz.kfkl.mstruct.gui.ui.ScattererMoleculeController" styleClass="no-padding-content">
 	<children>
 		<GridPane hgap="8" VBox.vgrow="ALWAYS">
 			<columnConstraints>
@@ -31,57 +33,90 @@
 				<HBox fx:id="occupParContainer" alignment="CENTER_LEFT" maxWidth="Infinity" prefHeight="30.0" spacing="4.0" GridPane.columnIndex="1" GridPane.rowIndex="3" />
 			</children>
 		</GridPane>
-		<HBox fx:id="flexibilityModelOptionContainer" alignment="CENTER_LEFT" prefHeight="30.0" spacing="4.0" />
-		<HBox fx:id="enableFlippingOptionContainer" alignment="CENTER_LEFT" prefHeight="30.0" spacing="4.0" />
-		<HBox fx:id="autoOptimizeStartingConformationOptionContainer" alignment="CENTER_LEFT" prefHeight="30.0" spacing="4.0" />
-		<HBox fx:id="optimizeOrientationOptionContainer" alignment="CENTER_LEFT" prefHeight="30.0" spacing="4.0" />
-		<HBox fx:id="rotationCenterOptionContainer" alignment="CENTER_LEFT" prefHeight="30.0" spacing="4.0" />
-		<HBox alignment="CENTER_LEFT" prefHeight="30.0" spacing="4.0">
-			<children>
-				<Label text="Log(likelihood) Scale:" />
-				<TextField fx:id="logLikelihoodScaleTextField" prefHeight="19.0" prefWidth="100.0"/>
-			</children>
-		</HBox>
-		<HBox alignment="CENTER_LEFT" prefHeight="30.0" spacing="4.0">
-			<children>
-				<Label text="MD Move Frequency:" />
-				<TextField fx:id="mDMoveFreqTextField" prefHeight="19.0" prefWidth="100.0"/>
-				<Label text="MD Move Energy:">
-					<padding>
-						<Insets left="8.0" />
-					</padding>
-				</Label>
-				<TextField fx:id="mDMoveEnergyTextField" prefHeight="19.0" prefWidth="100.0"/>
-			</children>
-		</HBox>
-		<HBox alignment="CENTER_LEFT" prefHeight="30.0" spacing="4.0">
-			<children>
-				<Label text="Center Atom:" />
-				<TextField fx:id="centerAtomTextField" prefHeight="19.0" prefWidth="100.0" editable="false"/>
-			</children>
-		</HBox>
-		<TableView fx:id="moleculeAtomsTableView">
-			<columns>
-				<TableColumn fx:id="moleculeAtomsTableNameColumn" prefWidth="75.0" text="Name" />
-				<TableColumn fx:id="moleculeAtomsTableScatteringPowerColumn" minWidth="20.0" prefWidth="120.0" text="Scattering Power" />
-				<TableColumn fx:id="moleculeAtomsTableXColumn" prefWidth="95.0" text="X" />
-				<TableColumn fx:id="moleculeAtomsTableYColumn" prefWidth="95.0" text="Y" />
-				<TableColumn fx:id="moleculeAtomsTableZColumn" prefWidth="95.0" text="Z" />
-				<TableColumn fx:id="moleculeAtomsTableOccupColumn" prefWidth="95.0" text="Occup" />
-				<TableColumn fx:id="moleculeAtomsTableCenterAtomColumn" prefWidth="55.0" text="Center"/>
-			</columns>
-		</TableView>
-		<!-- 
-		<TitledPane animated="false" text="Restraints - TODO">
-			<content>
-			</content>
+		<TitledPane animated="false" expanded="false" text="Molecule Configuration" styleClass="no-padding-content">
 			<font>
 				<Font name="System Bold" size="12.0" />
 			</font>
 			<VBox.margin>
 				<Insets top="8.0" />
 			</VBox.margin>
+			<content>
+				<TabPane tabClosingPolicy="UNAVAILABLE" >
+					<tabs>
+						<Tab text="Options">
+							<content>
+								<VBox fillWidth="true">
+									<children>
+										<HBox fx:id="flexibilityModelOptionContainer" alignment="CENTER_LEFT" prefHeight="30.0" spacing="4.0" />
+										<HBox fx:id="enableFlippingOptionContainer" alignment="CENTER_LEFT" prefHeight="30.0" spacing="4.0" />
+										<HBox fx:id="autoOptimizeStartingConformationOptionContainer" alignment="CENTER_LEFT" prefHeight="30.0" spacing="4.0" />
+										<HBox fx:id="optimizeOrientationOptionContainer" alignment="CENTER_LEFT" prefHeight="30.0" spacing="4.0" />
+										<HBox fx:id="rotationCenterOptionContainer" alignment="CENTER_LEFT" prefHeight="30.0" spacing="4.0" />
+										<HBox alignment="CENTER_LEFT" prefHeight="30.0" spacing="4.0">
+											<children>
+												<Label text="Log(likelihood) Scale:" />
+												<TextField fx:id="logLikelihoodScaleTextField" prefHeight="19.0" prefWidth="100.0"/>
+											</children>
+										</HBox>
+										<HBox alignment="CENTER_LEFT" prefHeight="30.0" spacing="4.0">
+											<children>
+												<Label text="MD Move Frequency:" />
+												<TextField fx:id="mDMoveFreqTextField" prefHeight="19.0" prefWidth="100.0"/>
+												<Label text="MD Move Energy:">
+													<padding>
+														<Insets left="8.0" />
+													</padding>
+												</Label>
+												<TextField fx:id="mDMoveEnergyTextField" prefHeight="19.0" prefWidth="100.0"/>
+											</children>
+										</HBox>
+									</children>
+								</VBox> 
+							</content>
+						</Tab>
+						<Tab text="Atoms">
+							<content>
+								<VBox fillWidth="true">
+									<HBox alignment="CENTER_LEFT" prefHeight="30.0" spacing="4.0">
+										<children>
+											<Label text="Center Atom:" />
+											<TextField fx:id="centerAtomTextField" prefHeight="19.0" prefWidth="100.0" editable="false"/>
+										</children>
+									</HBox>
+									<TableView fx:id="moleculeAtomsTableView">
+										<columns>
+											<TableColumn fx:id="moleculeAtomsTableNameColumn" prefWidth="75.0" text="Name" />
+											<TableColumn fx:id="moleculeAtomsTableScatteringPowerColumn" minWidth="20.0" prefWidth="120.0" text="Scattering Power" />
+											<TableColumn fx:id="moleculeAtomsTableXColumn" prefWidth="95.0" text="X" />
+											<TableColumn fx:id="moleculeAtomsTableYColumn" prefWidth="95.0" text="Y" />
+											<TableColumn fx:id="moleculeAtomsTableZColumn" prefWidth="95.0" text="Z" />
+											<TableColumn fx:id="moleculeAtomsTableOccupColumn" prefWidth="95.0" text="Occup" />
+											<TableColumn fx:id="moleculeAtomsTableCenterAtomColumn" prefWidth="55.0" text="Center"/>
+										</columns>
+									</TableView>
+								</VBox>
+							</content>
+						</Tab>
+						<Tab text="Bond Lengths">
+							<content>
+								<TableView fx:id="bondLengthsTableView" prefHeight="400.0" prefWidth="177.0" editable="true">
+									<columns>
+										<TableColumn fx:id="bondAtom1TableNameColumn" prefWidth="75.0" text="Atom 1"/>
+										<TableColumn fx:id="bondAtom2TableNameColumn" prefWidth="75.0" text="Atom 2" />
+										<TableColumn fx:id="bondLengthTableNameColumn" prefWidth="85.0" text="Length ??" />
+										<TableColumn fx:id="bondRestraintTableNameColumn" prefWidth="110.0" text="Restraint (length)" editable="true" />
+										<TableColumn fx:id="bondSigmaTableNameColumn" prefWidth="85.0" text="Sigma" editable="true"/>
+										<TableColumn fx:id="bondDeltaTableNameColumn" prefWidth="85.0" text="Delta" editable="true"/>
+										<TableColumn fx:id="bondOrderTableNameColumn" prefWidth="60.0" text="Order" editable="true"/>
+										<TableColumn fx:id="bondFreeTorsionTableNameColumn" prefWidth="90.0" text="Free Torsion" editable="true"/>
+									</columns>
+								</TableView>
+							</content>
+						</Tab>
+					</tabs>
+				</TabPane>
+			</content>
 		</TitledPane>
-		 -->
+	
 	</children>
 </VBox>
