--- a/src/main/resources/cz/kfkl/mstruct/gui/ui/scattererMolecule.fxml
+++ b/src/main/resources/cz/kfkl/mstruct/gui/ui/scattererMolecule.fxml
@@ -18,6 +18,22 @@
 
 <VBox fillWidth="true" styleClass="no-padding-content" xmlns="http://javafx.com/javafx/16" xmlns:fx="http://javafx.com/fxml/1" fx:controller="cz.kfkl.mstruct.gui.ui.ScattererMoleculeController">
 	<children>
+		<HBox alignment="CENTER_LEFT" prefHeight="30.0" spacing="4.0">
+			<children>
+				<Label text="Name:" />
+				<TextField fx:id="scattererNameTextField" prefHeight="19.0" minWidth="60.0" prefWidth="-Infinity" maxWidth="120"  disable="true" HBox.hgrow="ALWAYS"/>
+	            <Label layoutX="10.0" layoutY="17.0" text="Type:">
+	            	<HBox.margin>
+						<Insets left="8.0" />
+					</HBox.margin>
+	            </Label>
+	            <Label fx:id="scattererTypeLabel" layoutX="202.0" layoutY="17.0">
+	               <font>
+	                  <Font name="System Bold Italic" size="12.0" />
+	               </font>
+	            </Label>
+			</children>
+		</HBox>
 		<GridPane hgap="8" VBox.vgrow="ALWAYS">
 			<columnConstraints>
 				<ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" />
