--- a/src/main/resources/cz/kfkl/mstruct/gui/ui/optimization.fxml
+++ b/src/main/resources/cz/kfkl/mstruct/gui/ui/optimization.fxml
@@ -172,7 +172,7 @@
 								</HBox>
 								<TitledPane collapsible="false" maxHeight="Infinity" minHeight="30" text="MStruct Console" VBox.vgrow="ALWAYS" styleClass="no-padding-content">
 									<content>
-										<TextArea fx:id="consoleTextArea" editable="false" />
+										<TextArea fx:id="consoleTextArea" editable="false" styleClass="monospace-font"/>
 									</content>
 								</TitledPane>
 								<TitledPane animated="false" maxHeight="Infinity" minHeight="30" text="Job Logs" styleClass="no-padding-content">
