--- a/src/main/resources/cz/kfkl/mstruct/gui/ui/powderPatternCrystal.fxml
+++ b/src/main/resources/cz/kfkl/mstruct/gui/ui/powderPatternCrystal.fxml
@@ -62,17 +62,11 @@
 				<Label text="Global Biso:" GridPane.columnIndex="0" GridPane.rowIndex="0" />
 				<HBox fx:id="globalBisoParContainer" alignment="CENTER_LEFT" maxWidth="Infinity" prefHeight="30.0" spacing="4.0"
 					GridPane.columnIndex="1" GridPane.rowIndex="0" />
+				<Label text="Scale:" GridPane.columnIndex="0" GridPane.rowIndex="1" />
+				<HBox fx:id="powderPatternComponentScaleParContainer" alignment="CENTER_LEFT" maxWidth="Infinity" prefHeight="30.0" spacing="4.0"
+					GridPane.columnIndex="1" GridPane.rowIndex="1" />
 			</children>
 		</GridPane>
-		<HBox alignment="CENTER_LEFT" prefHeight="30.0" spacing="4.0">
-			<children>
-				<Label text="Scale:" />
-				<TextField fx:id="powderPatternComponentScaleTextField" prefHeight="19.0" prefWidth="80.0" />
-			</children>
-			<VBox.margin>
-				<Insets bottom="8.0" />
-			</VBox.margin>
-		</HBox>
 		<TitledPane animated="false" text="Absorption Correction">
 			<content>
 				<VBox>
