--- a/src/main/resources/cz/kfkl/mstruct/gui/ui/optimization.fxml
+++ b/src/main/resources/cz/kfkl/mstruct/gui/ui/optimization.fxml
@@ -114,17 +114,17 @@
 							<children>
 								<HBox alignment="CENTER_LEFT" prefHeight="30.0" prefWidth="200.0" spacing="8.0">
 									<children>
-										<Label layoutX="10.0" layoutY="10.0" text="Iterations (TODO):">
+										<Label layoutX="10.0" layoutY="10.0" text="Iterations:">
 											<HBox.margin>
 												<Insets />
 											</HBox.margin>
 										</Label>
 										<StackPane prefHeight="68.0" prefWidth="80.0">
 											<children>
-												<ProgressBar fx:id="jobProgressBar" prefWidth="100.0" progress="0.0" />
+												<ProgressBar fx:id="jobProgressBar" prefWidth="100.0" prefHeight="22" progress="0.0" />
 												<Label fx:id="jobProgressLabel" text="0 / 0">
 													<font>
-														<Font name="System Bold" size="12.0" />
+														<Font name="System Bold" size="11.0" />
 													</font>
 												</Label>
 											</children>
@@ -144,8 +144,14 @@
 										</Label>
 										<HBox alignment="CENTER_RIGHT" prefHeight="30.0" spacing="4.0" HBox.hgrow="ALWAYS">
 											<children>
-												<Label text="Rw (TODO):" />
+												<Label text="Rw:" />
 												<Label fx:id="jobRwFactorLabel" text="N/A">
+													<font>
+														<Font name="System Bold" size="12.0" />
+													</font>
+												</Label>
+												<Label text="GoF:" />
+												<Label fx:id="jobGoFLabel" text="N/A">
 													<font>
 														<Font name="System Bold" size="12.0" />
 													</font>
